RESOLVED FIXED 241395
Right-click on links don't work in WebKit
https://bugs.webkit.org/show_bug.cgi?id=241395
Summary Right-click on links don't work in WebKit
Mike Wyrzykowski
Reported 2022-06-07 17:58:48 PDT
Fix issue regarding context menus on text links
Attachments
Mike Wyrzykowski
Comment 1 2022-06-07 18:13:17 PDT
Wenson Hsieh
Comment 2 2022-06-08 08:38:52 PDT
EWS
Comment 3 2022-06-24 09:46:14 PDT
Committed 251828@main (5f6b3147994b): <https://commits.webkit.org/251828@main> Reviewed commits have been landed. Closing PR #1365 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.