Right-click on links doesn't work in WebKit with Edit Menu enabled https://bugs.webkit.org/show_bug.cgi?id=241395

Reviewed by Wenson Hsieh.

UIKit is installing another UIContextMenuInteraction which was resulting in
two UIContextMenuInteraction instances installed on the view. Right-click on links
and some images showed an incorrect 'Select All' menu only.

To avoid this, use the provided SPIs from UIKit which result in a single installed
UIContextMenuInteraction handler.

* Source/WebKit/Platform/spi/ios/UIKitSPI.h
Stage changes for non-internal builds.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:
Add convenience property for when USE(UICONTEXTMENU) is not defined.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView textInteractionAssistantContextMenuInteraction]):
Helper for checking respondsToSelector before attempting to call SPI method.

(-[WKContentView setUpInteraction]):
The textSelectionAssistant needs to be created before registerPreview is called
in order to decided if we should use the SPI.

(-[WKContentView gestureRecognizer:shouldRequireFailureOfGestureRecognizer:]):
(-[WKContentView gestureRecognizer:shouldBeRequiredToFailByGestureRecognizer:]):
(-[WKContentView deferringGestureRecognizer:shouldDeferOtherGestureRecognizer:]):
(-[WKContentView imageAnalysisGestureDidTimeOut:]):
(-[WKContentView contextMenuInteraction]):
Use helper method which returns the current UIContextMenuInteraction handler.

(-[WKContentView _registerPreview]):
Use the UIKit provided UIContextMenuInteraction if it exists and set the delegate
to the same as what we would have passed to UIContextMenuInteraction's initializer.

Otherwise use the previous shipping behavior.

Canonical link: https://commits.webkit.org/251828@main